fixed overflow on favorite list in the discover page

--- a/styles/app.css
+++ b/styles/app.css
@@ -438,7 +438,6 @@ body {
 
 .favorites-container .favorite-img {
   height: 100%;
-  width: 100%;
   border-radius: 50%;
 }
 
